// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Source Code test 1`] = `
<div class="Source sb-unstyled ">
  <pre class="prismjs">
    <code class="language-jsx"
          style="white-space: pre;"
    >
      <span class="token tag punctuation">
        &lt;
      </span>
      <span class="token tag class-name">
        Source
      </span>
      <span class="token tag">
      </span>
      <span class="token tag attr-name">
        code
      </span>
      <span class="token tag attr-value punctuation attr-equals">
        =
      </span>
      <span class="token tag attr-value punctuation">
        "
      </span>
      <span class="token tag attr-value">
        &lt;Component /&gt;
      </span>
      <span class="token tag attr-value punctuation">
        "
      </span>
      <span class="token tag">
      </span>
      <span class="token tag punctuation">
        /&gt;
      </span>
    </code>
  </pre>
  <button>
    Copy
  </button>
</div>
`;

exports[`Components/Source Component With Props Raw Displayed Source test 1`] = `
<div class="Source sb-unstyled ">
  <pre class="prismjs">
    <code class="language-jsx"
          style="white-space: pre;"
    >
      <span class="token comment">
        // Source code displayed with "importPathReplacements" applied
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token keyword">
        import
      </span>
      <span class>
        Component
      </span>
      <span class="token keyword">
        from
      </span>
      <span class>
      </span>
      <span class="token string">
        '@idesigncode/storybook-tools/Component.mjs'
      </span>
      <span class="token punctuation">
        ;
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token keyword">
        import
      </span>
      <span class>
        Preserve
      </span>
      <span class="token keyword">
        from
      </span>
      <span class>
      </span>
      <span class="token string">
        '../src/Preserve.mjs'
      </span>
      <span class="token punctuation">
        ;
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token keyword">
        const
      </span>
      <span class>
        notAnImport
      </span>
      <span class="token operator">
        =
      </span>
      <span class>
      </span>
      <span class="token string">
        '../src/notAnImport.mjs'
      </span>
      <span class="token punctuation">
        ;
      </span>
    </code>
  </pre>
  <button>
    Copy
  </button>
</div>
`;

exports[`Components/Source Component With Props Raw test 1`] = `
<div class="Source sb-unstyled ">
  <pre class="prismjs">
    <code class="language-jsx"
          style="white-space: pre;"
    >
      <span class="token comment">
        // Stories of Component.mjs
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token keyword">
        import
      </span>
      <span class>
        ComponentWithPropsRaw
      </span>
      <span class="token keyword">
        from
      </span>
      <span class>
      </span>
      <span class="token string">
        './ComponentWithProps.mjs?raw'
      </span>
      <span class="token punctuation">
        ;
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token keyword">
        import
      </span>
      <span class>
      </span>
      <span class="token operator">
        *
      </span>
      <span class>
      </span>
      <span class="token keyword">
        as
      </span>
      <span class>
        packageJson
      </span>
      <span class="token keyword">
        from
      </span>
      <span class>
      </span>
      <span class="token string">
        '../package.json'
      </span>
      <span class="token punctuation">
        ;
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token tag punctuation">
        &lt;
      </span>
      <span class="token tag class-name">
        Source
      </span>
      <span class="token tag">
      </span>
      <span class="token tag">
      </span>
      <span class="token tag attr-name">
        code
      </span>
      <span class="token tag script language-javascript script-punctuation punctuation">
        =
      </span>
      <span class="token tag script language-javascript punctuation">
        {
      </span>
      <span class="token tag script language-javascript">
        ComponentWithPropsRaw
      </span>
      <span class="token tag script language-javascript punctuation">
        }
      </span>
      <span class="token tag">
      </span>
      <span class="token tag">
      </span>
      <span class="token tag attr-name">
        importPathReplacements
      </span>
      <span class="token tag script language-javascript script-punctuation punctuation">
        =
      </span>
      <span class="token tag script language-javascript punctuation">
        {
      </span>
      <span class="token tag script language-javascript constant">
        JSON
      </span>
      <span class="token tag script language-javascript punctuation">
        .
      </span>
      <span class="token tag script language-javascript function">
        stringify
      </span>
      <span class="token tag script language-javascript punctuation">
        (
      </span>
      <span class="token tag script language-javascript punctuation">
        {
      </span>
      <span class="token tag script language-javascript">
      </span>
      <span class="token tag script language-javascript">
      </span>
      <span class="token tag script language-javascript comment">
        // The [value] will replace the [key] matched within an import path
      </span>
      <span class="token tag script language-javascript">
      </span>
      <span class="token tag script language-javascript">
      </span>
      <span class="token tag script language-javascript string-property property">
        '../'
      </span>
      <span class="token tag script language-javascript operator">
        :
      </span>
      <span class="token tag script language-javascript">
      </span>
      <span class="token tag script language-javascript string">
        ''
      </span>
      <span class="token tag script language-javascript punctuation">
        ,
      </span>
      <span class="token tag script language-javascript">
      </span>
      <span class="token tag script language-javascript comment">
        // ? Remove "parent directory" relative path segments
      </span>
      <span class="token tag script language-javascript">
      </span>
      <span class="token tag script language-javascript">
      </span>
      <span class="token tag script language-javascript string-property property">
        './'
      </span>
      <span class="token tag script language-javascript operator">
        :
      </span>
      <span class="token tag script language-javascript">
      </span>
      <span class="token tag script language-javascript string">
        ''
      </span>
      <span class="token tag script language-javascript punctuation">
        ,
      </span>
      <span class="token tag script language-javascript">
      </span>
      <span class="token tag script language-javascript comment">
        // ? Remove "current directory" relative path segments
      </span>
      <span class="token tag script language-javascript">
      </span>
      <span class="token tag script language-javascript">
      </span>
      <span class="token tag script language-javascript string-property property">
        'src/'
      </span>
      <span class="token tag script language-javascript operator">
        :
      </span>
      <span class="token tag script language-javascript">
      </span>
      <span class="token tag script language-javascript template-string template-punctuation string">
        \`
      </span>
      <span class="token tag script language-javascript template-string interpolation interpolation-punctuation punctuation">
        \${
      </span>
      <span class="token tag script language-javascript template-string interpolation">
        packageJson
      </span>
      <span class="token tag script language-javascript template-string interpolation punctuation">
        .
      </span>
      <span class="token tag script language-javascript template-string interpolation">
        name
      </span>
      <span class="token tag script language-javascript template-string interpolation interpolation-punctuation punctuation">
        }
      </span>
      <span class="token tag script language-javascript template-string string">
        /
      </span>
      <span class="token tag script language-javascript template-string template-punctuation string">
        \`
      </span>
      <span class="token tag script language-javascript punctuation">
        ,
      </span>
      <span class="token tag script language-javascript">
      </span>
      <span class="token tag script language-javascript comment">
        // ? Prepend package name
      </span>
      <span class="token tag script language-javascript">
      </span>
      <span class="token tag script language-javascript">
      </span>
      <span class="token tag script language-javascript punctuation">
        }
      </span>
      <span class="token tag script language-javascript punctuation">
        )
      </span>
      <span class="token tag script language-javascript punctuation">
        }
      </span>
      <span class="token tag">
      </span>
      <span class="token tag">
      </span>
      <span class="token tag punctuation">
        /&gt;
      </span>
    </code>
  </pre>
  <button>
    Copy
  </button>
</div>
`;

exports[`Components/Source Component With Props test 1`] = `
<div class="Source sb-unstyled ">
  <pre class="prismjs">
    <code class="language-jsx"
          style="white-space: pre;"
    >
      <span class="token comment">
        // ComponentWithProps.mjs (the "example component")
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token keyword">
        import
      </span>
      <span class>
        Component
      </span>
      <span class="token keyword">
        from
      </span>
      <span class>
      </span>
      <span class="token string">
        '../src/Component.mjs'
      </span>
      <span class="token punctuation">
        ;
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token keyword">
        import
      </span>
      <span class>
        Preserve
      </span>
      <span class="token keyword">
        from
      </span>
      <span class>
      </span>
      <span class="token string">
        '../src/Preserve.mjs'
      </span>
      <span class="token punctuation">
        ;
      </span>
      <span class>
      </span>
      <span class="token comment">
        // preserve-path
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token keyword">
        const
      </span>
      <span class>
        notAnImport
      </span>
      <span class="token operator">
        =
      </span>
      <span class>
      </span>
      <span class="token string">
        '../src/notAnImport.mjs'
      </span>
      <span class="token punctuation">
        ;
      </span>
    </code>
  </pre>
  <button>
    Copy
  </button>
</div>
`;

exports[`Components/Source Dark test 1`] = `
<div class="Source sb-unstyled dark">
  <pre class="prismjs">
    <code class="language-jsx"
          style="white-space: pre;"
    >
      <span class="token tag punctuation">
        &lt;
      </span>
      <span class="token tag class-name">
        Source
      </span>
      <span class="token tag">
      </span>
      <span class="token tag attr-name">
        code
      </span>
      <span class="token tag attr-value punctuation attr-equals">
        =
      </span>
      <span class="token tag attr-value punctuation">
        "
      </span>
      <span class="token tag attr-value">
        &lt;Component /&gt;
      </span>
      <span class="token tag attr-value punctuation">
        "
      </span>
      <span class="token tag">
      </span>
      <span class="token tag attr-name">
        dark
      </span>
      <span class="token tag script language-javascript script-punctuation punctuation">
        =
      </span>
      <span class="token tag script language-javascript punctuation">
        {
      </span>
      <span class="token tag script language-javascript boolean">
        true
      </span>
      <span class="token tag script language-javascript punctuation">
        }
      </span>
      <span class="token tag">
      </span>
      <span class="token tag punctuation">
        /&gt;
      </span>
    </code>
  </pre>
  <button>
    Copy
  </button>
</div>
`;

exports[`Components/Source Props test 1`] = `
<div class="propsTable sb-unstyled">
  <table aria-hidden="false">
    <thead>
      <tr>
        <th>
          Prop
        </th>
        <th>
          Type
        </th>
        <th>
          Value
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          code
          <span class="requiredProp">
            *
          </span>
        </td>
        <td>
          <code>
            string
          </code>
        </td>
        <td>
          <div class="Source sb-unstyled ">
            <pre class="prismjs">
              <code class="language-jsx"
                    style="white-space: pre;"
              >
                <span class="token string">
                  "&lt;Component /&gt;"
                </span>
              </code>
            </pre>
            <button>
              Copy
            </button>
          </div>
        </td>
      </tr>
      <tr>
        <td>
          dark
        </td>
        <td>
          <code>
            boolean
          </code>
        </td>
        <td>
          <div class="Source sb-unstyled ">
            <pre class="prismjs">
              <code class="language-jsx"
                    style="white-space: pre;"
              >
                <span class="token function">
                  useDarkMode
                </span>
                <span class="token punctuation">
                  (
                </span>
                <span class="token punctuation">
                  )
                </span>
              </code>
            </pre>
            <button>
              Copy
            </button>
          </div>
        </td>
      </tr>
      <tr>
        <td>
          importPathReplacements
        </td>
        <td>
          <code>
            string || boolean
          </code>
        </td>
        <td>
          <div class="Source sb-unstyled ">
            <pre class="prismjs">
              <code class="language-jsx"
                    style="white-space: pre;"
              >
                <span class>
                  process
                </span>
                <span class="token punctuation">
                  .
                </span>
                <span class>
                  env
                </span>
                <span class="token punctuation">
                  .
                </span>
                <span class="token constant">
                  IMPORT_PATH_REPLACEMENTS
                </span>
              </code>
            </pre>
            <button>
              Copy
            </button>
          </div>
        </td>
      </tr>
      <tr>
        <td>
          removePropsTable
        </td>
        <td>
          <code>
            boolean
          </code>
        </td>
        <td>
          <div class="Source sb-unstyled ">
            <pre class="prismjs">
              <code class="language-jsx"
                    style="white-space: pre;"
              >
                <span class="token boolean">
                  true
                </span>
              </code>
            </pre>
            <button>
              Copy
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
